@@ -1,4 +1,4 @@
-$NetBSD: patch-aa,v 1.6 2003/10/03 03:10:57 explorer Exp $
+$NetBSD: patch-aa,v 1.7 2004/07/07 16:51:26 xtraeme Exp $
 
 --- Makefile.PL.orig	2003-04-24 07:05:26.000000000 +0200
 +++ Makefile.PL	2003-06-23 13:59:32.000000000 +0200
@@ -19,7 +19,7 @@ $NetBSD: patch-aa,v 1.6 2003/10/03 03:10:57 explorer Exp $
 -    $XPM  = $^O !~ /^freebsd|MSWin32$/ && lc prompt('Build XPM support?','y') eq 'y';
 +    $JPEG = 'y';
 +    $FT = 'y';
-+    $XPM = 'y';
++    $XPM = '';
  }
  ##################################################################################################################
  
